# ESTKPipeServer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: FUNDING.yml
backend/: main.cpp  main.hpp
backend/src/: eval.cpp  eval.hpp  getSpBasicSuite.cpp  getSpBasicSuite.hpp  pipeServer.cpp  pipeServer.hpp
frontend/: loadDll.ps1  runServer.ps1
